--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -534,8 +534,6 @@
 @media only screen and (min-width: 64rem) {
     #cs-navigation {
         width: 100%;
-        /* prevents padding and border from affecting height and width */
-        box-sizing: border-box;
         padding: 0 1rem;
         background-color: #fff;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -679,10 +677,6 @@
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    #todo-form-container {
-        padding: var(--dialogPadding);
-    }
-
     #todo-form-container .cs-container {
         width: 100%;
         /* changes to 1280px at desktop */
@@ -691,6 +685,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: var(--dialogPadding);
+        border-radius: 0.3rem;
     }
 
     #todo-form-container .cs-content {
@@ -768,8 +764,6 @@
         padding-left: 1.25rem;
         border: 1px solid #b4b2c7;
         border-radius: 0.5rem;
-        /* prevents border & padding from affecting height */
-        box-sizing: border-box;
         transition: border 0.3s;
     }
 
@@ -793,14 +787,11 @@
         text-align: center;
         color: #fff;
         min-width: 9.375rem;
-        padding: 0 1.5rem;
         background-color: var(--primary);
         border-radius: 0.25rem;
         display: inline-block;
         position: relative;
         z-index: 1;
-        /* prevents padding from adding to the width */
-        box-sizing: border-box;
     }
 
     #todo-form-container .cs-button-solid:before {
@@ -859,7 +850,7 @@
         display: block;
     }
 
-    
+
 }
 
 /* Tablet - 700px */
@@ -887,6 +878,9 @@
 
 /* Small Desktop - 1024px */
 @media only screen and (min-width: 64rem) {
+
+
+
     #todo-form-container .cs-container {
         max-width: 32.625rem;
         /* 60px - 108px */
@@ -901,14 +895,14 @@
 
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
-    body.dark-mode #todo-form-container {
+    body.dark-mode #todo-form-container .cs-container {
         background-color: var(--accent);
-        width: 90vh;
+
     }
 
     body.dark-mode #todo-form-container .cs-text,
     body.dark-mode #todo-form-container .cs-title,
-    body.dark-mode #todo-form-container .cs-label{
+    body.dark-mode #todo-form-container .cs-label {
 
         color: var(--bodyTextColorWhite);
     }
